# ocp-demo-monorepo

./: README.md  open-cluster-management.yaml
be-golang/: Dockerfile  main.go
be-golang/src/: main.go
be-python/: Dockerfile  app.py
be-quarkus/: README.md  pom.xml
be-quarkus/.s2i/: environment
be-quarkus/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-distroless
be-quarkus/src/main/resources/: application.properties
be-rust/: .dockerignore  Cargo.toml  Dockerfile
be-rust/app/: Cargo.toml
be-rust/app/src/: main.rs
be-rust/src/: main.rs
fe-node/: Dockerfile  server.js
fe-node/src/: index.html  package.json  server.js
fe-node/src/views/: home.handlebars
kubernetes/: payload.json
kubernetes/base/: kustomization.yaml
kubernetes/base/be-golang/: build-config.yaml  deployment-config.yaml
kubernetes/base/be-python/: build-config.yaml  deployment-config.yaml
kubernetes/base/be-quarkus/: build-config.yaml  deployment-config.yaml  image-stream.yaml
kubernetes/base/be-rust/: build-config.yaml  deployment-config.yaml
kubernetes/base/fe-node/: build-config.yaml  deployment-config.yaml  service.yaml
kubernetes/base/infra/: image-builder.yaml  route-be.yaml  route-fe.yaml  service.yaml
kubernetes/overlays/wayne/: kustomization.yaml  route-be.yaml  route-fe.yaml
kubernetes/overlays/wayne/be-golang/: build-config.yaml
kubernetes/overlays/wayne/be-python/: build-config.yaml
kubernetes/overlays/wayne/be-rust/: build-config.yaml
kubernetes/overlays/wayne/fe-node/: build-config.yaml
(+4 files in other folders)
