[package]
name = "rest-example"
version = "0.0.0"
authors = ["Cerberus <dont@write.me>"]
edition = "2018"
# Forked from https://github.com/gruberb
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
